--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "node_modules/typescript/bin/tsc",
     "watch": "node_modules/typescript/bin/tsc -w --preserveWatchOutput"
   },
@@ -22,11 +22,14 @@
   "devDependencies": {
     "@types/aws-lambda": "^8.10.72",
     "@types/aws-sdk": "^2.7.0",
+    "@types/jest": "^26.0.20",
     "@types/mime-types": "^2.1.0",
     "@types/mocha": "^8.2.0",
     "@types/node": "^14.14.33",
     "@types/twilio": "^2.11.0",
     "@types/uuid": "^8.3.0",
+    "jest": "^26.6.3",
+    "ts-jest": "^26.5.3",
     "typescript": "^4.1.5"
   }
 }
