--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,9 @@
+stages:
+  - build
+  - test
+
 build:
-  stage: install
+  stage: build
   script: npm install
   artifacts:
     name: "artifacts"
@@ -11,7 +15,7 @@ build:
   only:
     - merge_requests
 
-test:
+test:unit:
   stage: test
   script:
     - npm run test
