chore: deploy sam stack

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,7 @@ image: node:latest
 stages:
   - build
   - test
+  - deploy
 
 # This folder is cached between builds
 # http://docs.gitlab.com/ee/ci/yaml/README.html#cache
@@ -31,3 +32,17 @@ test:unit:
     - build
   only:
     - merge_requests
+
+production:
+  image: python:3.8
+  stage: deploy
+  before_script:
+    - pip3 install awscli --upgrade
+    - pip3 install aws-sam-cli --upgrade
+  script:
+    - sam build
+    - sam package --output-template-file packaged.yaml --s3-bucket $SAM_S3_BUCKET
+    - sam deploy --template-file packaged.yaml --stack-name livelot-sam --s3-bucket $SAM_S3_BUCKET --s3-prefix $SAM_S3_PREFIX --capabilities CAPABILITY_IAM --region us-east-2
+  only:
+    - master
+  # environment: production
