--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,7 +34,7 @@ test:unit:
     - merge_requests
 
 production:
-  image: python:3.8
+  image: nikolaik/python-nodejs
   stage: deploy
   before_script:
     - pip3 install awscli --upgrade
