--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@livelot/get-signed-url",
+  "name": "@livelot/livelot-sam",
   "version": "1.0.0",
   "description": "",
   "main": "app.ts",
@@ -7,6 +7,10 @@
     "test": "jest",
     "build": "node_modules/typescript/bin/tsc",
     "watch": "node_modules/typescript/bin/tsc -w --preserveWatchOutput"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://gitlab.com/livelot/livelot-sam.git"
   },
   "keywords": [],
   "author": "LiveLot LLC",
@@ -24,8 +28,8 @@
     "@types/aws-sdk": "^2.7.0",
     "@types/jest": "^26.0.20",
     "@types/mime-types": "^2.1.0",
-    "@types/mocha": "^8.2.0",
     "@types/node": "^14.14.33",
+    "@types/qs": "^6.9.4",
     "@types/twilio": "^2.11.0",
     "@types/uuid": "^8.3.0",
     "jest": "^26.6.3",
