--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,6 +40,7 @@ production:
     - pip3 install awscli --upgrade
     - pip3 install aws-sam-cli --upgrade
   script:
+    - npm run build
     - sam build
     - sam package --output-template-file packaged.yaml --s3-bucket $SAM_S3_BUCKET
     - sam deploy --template-file packaged.yaml --stack-name livelot-sam --s3-bucket $SAM_S3_BUCKET --s3-prefix $SAM_S3_PREFIX --capabilities CAPABILITY_IAM --region us-east-2
