--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,7 +42,7 @@ production:
   script:
     - npm run build
     - sam build
-    - sam package --output-template-file packaged.yaml --s3-bucket $SAM_S3_BUCKET
+    - sam package --output-template-file packaged.yaml --s3-bucket $SAM_S3_BUCKET --s3-prefix $SAM_S3_PREFIX --region us-east-2
     - sam deploy --template-file packaged.yaml --stack-name livelot-sam --s3-bucket $SAM_S3_BUCKET --s3-prefix $SAM_S3_PREFIX --capabilities CAPABILITY_IAM --region us-east-2
   only:
     - master
