--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,7 +33,7 @@ test:unit:
   only:
     - merge_requests
 
-production:
+deploy:production:
   image: nikolaik/python-nodejs
   stage: deploy
   before_script:
@@ -41,9 +41,8 @@ production:
     - pip3 install aws-sam-cli --upgrade
   script:
     - npm run build
-    - sam build
+    - sam build --parameter-overrides "StageType=prod"
     - sam package --output-template-file packaged.yaml --s3-bucket $SAM_S3_BUCKET --s3-prefix $SAM_S3_PREFIX --region us-east-2
-    - sam deploy --template-file packaged.yaml --stack-name livelot-sam --s3-bucket $SAM_S3_BUCKET --s3-prefix $SAM_S3_PREFIX --capabilities CAPABILITY_IAM --region us-east-2 --no-confirm-changeset
+    - sam deploy --template-file packaged.yaml --stack-name livelot-sam-prod --s3-bucket $SAM_S3_BUCKET --s3-prefix $SAM_S3_PREFIX --capabilities CAPABILITY_IAM --region us-east-2 --no-confirm-changeset --parameter-overrides "StageType=prod"
   only:
     - master
-  # environment: production
