--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,8 +3,8 @@ image: node:latest
 stages:
   - build
   - test
-  - deploy
-
+  - deploy-stage
+  - deploy-master
 # This folder is cached between builds
 # http://docs.gitlab.com/ee/ci/yaml/README.html#cache
 cache:
@@ -35,32 +35,31 @@ test:unit:
 
 deploy:stage:
   image: nikolaik/python-nodejs
-  stage: deploy
+  stage: deploy-stage
   before_script:
     - pip3 install awscli --upgrade
     - pip3 install aws-sam-cli --upgrade
   script:
     - npm run build
-    - sam build --parameter-overrides "StageType=stage"
+    - sam build --parameter-overrides "StageType=stage" "BranchName=master"
     - sam package --output-template-file packaged.yaml --s3-bucket $SAM_S3_BUCKET --s3-prefix $SAM_S3_PREFIX --region us-east-2
-    - sam deploy --template-file packaged.yaml --stack-name livelot-sam-stage --s3-bucket $SAM_S3_BUCKET --s3-prefix $SAM_S3_PREFIX --capabilities CAPABILITY_IAM --region us-east-2 --no-confirm-changeset --parameter-overrides "StageType=stage"
+    - sam deploy --template-file packaged.yaml --stack-name livelot-sam-stage --s3-bucket $SAM_S3_BUCKET --s3-prefix $SAM_S3_PREFIX --capabilities CAPABILITY_IAM --region us-east-2 --no-confirm-changeset --parameter-overrides "StageType=stage" "BranchName=master"
   only:
     - master
 
 deploy:production:
   image: nikolaik/python-nodejs
-  stage: deploy
+  stage: deploy-master
   before_script:
     - pip3 install awscli --upgrade
     - pip3 install aws-sam-cli --upgrade
   script:
     - npm run build
-    - sam build --parameter-overrides "StageType=prod"
+    - sam build --parameter-overrides "StageType=prod" "BranchName=master"
     - sam package --output-template-file packaged.yaml --s3-bucket $SAM_S3_BUCKET --s3-prefix $SAM_S3_PREFIX --region us-east-2
-    - sam deploy --template-file packaged.yaml --stack-name livelot-sam-prod --s3-bucket $SAM_S3_BUCKET --s3-prefix $SAM_S3_PREFIX --capabilities CAPABILITY_IAM --region us-east-2 --no-confirm-changeset --parameter-overrides "StageType=prod"
-  rules:
-    - if: '$CI_PIPELINE_SOURCE == "push"'
-      when: never # Prevent pipeline run for push event
-    - if: '$CI_COMMIT_BRANCH == "master"'
-      when: manual # Run pipeline manually on master
-
+    - sam deploy --template-file packaged.yaml --stack-name livelot-sam-prod --s3-bucket $SAM_S3_BUCKET --s3-prefix $SAM_S3_PREFIX --capabilities CAPABILITY_IAM --region us-east-2 --no-confirm-changeset --parameter-overrides "StageType=prod" "BranchName=master"
+  dependencies:
+    - deploy-stage
+  only:
+    - master
+  when: manual
